<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/white"
    android:layout_gravity="center_horizontal">

    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        tools:context=".BTController">

        <TableRow
            android:layout_height="73dp"
            android:layout_width="60dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center">

            <ImageButton
                android:id="@+id/forward"
                android:layout_height="73dp"
                android:layout_width="60dp"
                android:layout_weight="0"
                android:background="@color/white"
                android:src="@drawable/forward"
                android:text="@string/forward"
                android:onClick="sendMessage"/>
        </TableRow>

        <TableRow
            android:layout_width="300dp"
            android:layout_height="53dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center">

            <ImageButton
                android:id="@+id/left"
                android:layout_height="60dp"
                android:layout_width="73dp"
                android:background="@color/white"
                android:src="@drawable/left"
                android:text="@string/left"
                android:onClick="sendMessage"/>

            <ImageButton
                android:id="@+id/stop"
                android:layout_height="70dp"
                android:layout_width="70dp"
                android:text="@string/stop"
                android:background="@color/white"
                android:scaleType="fitCenter"
                android:src="@drawable/stop1"
                android:onClick="sendMessage" />

            <ImageButton
                android:id="@+id/right"
                android:layout_height="60dp"
                android:layout_width="73dp"
                android:text="@string/right"
                android:background="@color/white"
                android:src="@drawable/right"
                android:onClick="sendMessage"/>

        </TableRow>

        <TableRow
            android:layout_width="73dp"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center">

            <ImageButton
                android:id="@+id/backward"
                android:layout_height="73dp"
                android:layout_width="60dp"
                android:background="@color/white"
                android:text="@string/backward"
                android:src="@drawable/down"
                android:onClick="sendMessage"/>
        </TableRow>

    </TableLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:layout_gravity="bottom"
        android:gravity="center_horizontal">

        <ImageButton
            android:layout_weight="0"
            android:id="@+id/ck"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:scaleType="fitCenter"
            android:text="@string/clockwise"
            android:background="@color/white"
            android:src="@drawable/cw_icon_"
            android:onClick="sendMessage"/>
        <ImageButton
            android:layout_weight="0"
            android:id="@+id/cck"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:scaleType="fitCenter"
            android:text="@string/counter_clockwise"
            android:background="@color/white"
            android:src="@drawable/ccw_icon_"
            android:onClick="sendMessage"/>
    </LinearLayout>

</LinearLayout>